# pico-usb-midi-interface

./: .gitmodules  CMakeLists.txt  README.md  main.c  tusb_config.h  usb_descriptors.c
